src/core-crm/main/default/objects/Broker__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email label</label>
    <type>Email</type>
</CustomField>