src/core-crm/main/default/objects/Broker__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone Lanel Updated Sep 28 night</label>
    <type>Phone</type>
</CustomField>