src/core-crm/main/default/objects/Broker__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Updated</description>
    <label>Title all that jazz</label>
    <length>30</length>
    <type>Text</type>
</CustomField>