src/core-crm/main/default/objects/Broker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All that jazz 1</label>
</ListView>